--- a/build.xml
+++ b/build.xml
@@ -3,6 +3,7 @@
   <property name="src.dir" value="src"/>
   <property name="build.dir" value="build"/>
   <property name="classes.dir" value="${build.dir}/classes"/>
+  <property name="resources.dir" value="resources"/>
   <property name="jar.dir" value="${build.dir}/jar"/>
   <property name="main-class" value="mennov1.MennoV1"/>
   <property name="test-class" value="mennov1.ThuisTester"/>
@@ -47,7 +48,9 @@
     <javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="classpath" />
   </target>
   <target name="jar" depends="compile">
-    <jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
+    <jar destfile="${jar.dir}/${ant.project.name}.jar">
+      <fileset dir="${classes.dir}"/>
+      <fileset dir="${resources.dir}"/>
       <manifest>
         <attribute name="Main-Class" value="${main-class}"/>
       </manifest>
@@ -69,7 +72,9 @@
   <!-- Thuis compileren we met "ant test" -->
   <target name="test" depends="prepare">
     <javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="classpath" />
-    <jar destfile="${jar.dir}/test-${ant.project.name}.jar" basedir="${classes.dir}">
+    <jar destfile="${jar.dir}/test-${ant.project.name}.jar">
+      <fileset dir="${classes.dir}"/>
+      <fileset dir="${resources.dir}"/>
       <manifest>
         <attribute name="Main-Class" value="${test-class}"/>
       </manifest>
