--- a/build.xml
+++ b/build.xml
@@ -12,8 +12,8 @@
 
   <path id="classpath">
     <fileset dir="${lib.dir}" includes="**/*.jar" />
+    <fileset dir="${lib.dir}" includes="**/*.*" />
   	<!-- Op een mac kunnen er bij gebruik van macports dingen in /opt/local/lib/libopencv_* staan -->
-  	<!-- Op de RasPi staan er dingen voor opencv in /usr/lib/libopencv_* -->
     <!-- Maar het is de bedoeling dat deze bestanden in een .jar verpakt zitten -->
   </path>
 
